--- a/classes/cap_03/ignews/src/pages/posts/post.module.scss
+++ b/classes/cap_03/ignews/src/pages/posts/post.module.scss
@@ -38,7 +38,31 @@
           margin: 0.5rem 0;
         }
       }
+
+      &.previewContent {
+        background: linear-gradient(ds.$gray-100, transparent);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
     }
 
+    > footer {
+      padding: 2rem;
+      text-align: center;
+      background: ds.$gray-850;
+      border-radius: 100px;
+      font-size: 1.25rem;
+      font-weight: bold;
+      margin: 4rem 0 2rem;
+  
+      a { 
+        color: ds.$yellow-500;
+        margin-left: 0.5rem;
+
+        &:hover{
+          text-decoration: underline
+        }
+      }
+    }
   }
 }
